# portparser-v2

./: .gitattributes  .gitignore  LICENSE  README.md  app.py  main.py  not_used_Dockerfile  pyproject.toml  requirements.txt
src/: style.css
src/annotation/: setP11.sh
src/evalatin2024-latinpipe/: latinpipe_evalatin24.py  parsed.conllu
src/lexikon/: __init__.py  abbrev.py  lexikon.py
src/portSentencer/: portSent.py
src/portTokenizer/: abbrev.txt  portTok.py
src/portparser_v2/: __init__.py  core.py  portSent.py  portTok.py
src/postproc/: VERB.tsv  WORDmaster.txt  conlluFile.py  postprocess.py  usAbbr.tsv
temp/: 0_input_prediction.conllu
tests/: test_core.py  test_portSent.py  test_portTok.py  test_postprocess.py
tests/fixtures/portSentencer/: expected_alienista_sents.txt
tests/fixtures/portTok/: expected_sents.conllu
tests/fixtures/portparser_v2/: alienista.txt  alienista_cloud.conllu  alienista_local.conllu
