[project]
name = "portparser-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=0.36.0",
    "keras>=3.12.0",
    "pandas>=2.3.3",
    "streamlit>=1.52.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "ufal-chu-liu-edmonds>=1.0.3",
    "watchdog>=6.0.0",
]
