[project]
name = "portparser-v2"
version = "0.1.0"
description = "A parsing model for Brazilian Portuguese following Universal Dependencies"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=0.36.0",
    "keras>=3.12.0",
    "pandas>=2.3.3",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "ufal-chu-liu-edmonds>=1.0.3",
]

[project.optional-dependencies]
ui = ["streamlit>=1.52.0", "watchdog>=6.0.0"]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portparser_v2", "src/lexikon"]
